# field_accessor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: devskim.yml
src/: lib.rs
tests/: test.rs  trybuild.rs
tests/ui/fail/: enum_not_supported.rs  enum_not_supported.stderr  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr
tests/ui/pass/: basic_struct.rs
