[package]
name = "field_accessor"
version = "0.6.1"
edition = "2021"
authors = ["Tomohiro Endo <europeanplaice@gmail.com>"]
description = "A procedural macro to get and set a struct field by String dynamically." 
repository = "https://github.com/europeanplaice/field_accessor"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["data-structures"]
keywords = ["getattr", "setattr", "getter", "setter", "proc-macro"]
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
